--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,3 @@
-apply plugin: 'java'
-
-sourceCompatibility = JavaVersion.VERSION_1_7
-targetCompatibility = JavaVersion.VERSION_1_7
-
-sourceSets {
-    main {
-        java.srcDir 'src'
-    }
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:66d8c7ade013a4dc79ccdd8ba397aa817b2cd70163e80b7e3c378bc71915e87c
+size 173
